# rphide

./: .gitignore  Cargo.toml  build.rs
src/: config.rs  discord.rs  discord_data.rs  lib.rs  main.rs  self_ipc.rs  systray.rs  tray.rs  trigger.rs  ui.rs
