[package]
name = "rphide"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-sdk = "0.2.1"
toml = "0.5.8"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
tray-item = "0.6.0"
sysinfo = "0.20.5"
regex = "1.5.4"
tokio = "1.13.0"
open = "2.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.14.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

