[package]
name = "rphide"
version = "0.1.0"
edition = "2021"

[dependencies]
discord-sdk = "0.2.1"
toml = "0.5.8"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.20.5"
regex = "1.5.4"
tokio = "1.13.0"
open = "2.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.14.3"
tray-item = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
# I seriously didn't want to do this, but I eventually found that packaging rc into exe is even worse
trayicon = "0.1.1"
winapi = "0.3.9"

