[package]
name = "rphide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = "1.1.1"
tray-item = "0.7.0"
byteorder = "1.4.3"
serde = { version = "1.0.138", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.17"
env_logger = "0.9.0"
egui = "0.19.0"
eframe = "0.19.0"
sysinfo = "0.26.2"


[target.'cfg(target_os="linux")'.dependencies]
libappindicator = "0.7.1"
gtk = "0.15.5"